--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Leonardo Noronha Santos",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.897.0",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
